[project]
name = "brainglobe-utils"
authors = [{ name = "Adam Tyson", email = "code@adamltyson.com" }]
description = "Shared general purpose tools for the BrainGlobe project"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "brainglobe-atlasapi >= 2.0.1",
    "brainglobe-space",
    "configobj",
    "natsort",
    "nibabel >= 2.1.0",
    "numpy",
    "dask",
    "pandas",
    "psutil",
    "pyarrow",
    "PyYAML",
    "scikit-image",
    "scipy",
    "slurmio",
    "tifffile",
    "tqdm",
]
dynamic = ["version"]


[project.scripts]
cite-brainglobe = "brainglobe_utils.citation.cite:cli"

[project.urls]
homepage = "https://brainglobe.info"
bug_tracker = "https://github.com/brainglobe/brainglobe-utils/issues"
source_code = "https://github.com/brainglobe/brainglobe-utils"
user_support = "https://github.com/brainglobe/brainglobe-utils/issues"

[project.optional-dependencies]
napari = ["napari>=0.4.18", "qtpy", "superqt"]

dev = [
    "black",
    "coverage",
    "mypy",
    "pre-commit",
    "pyqt5",
    "pytest-cov",
    "pytest-qt",
    "pytest-mock",
    "pytest",
    "qtpy",
    "ruff",
    "scikit-image",
    "setuptools_scm",
    "superqt",
    "tox",
]


[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe_utils*"]
exclude = ["tests", "docs*"]

[tool.pytest.ini_options]
addopts = "--cov=brainglobe_utils"

[tool.black]
target-version = ['py39', 'py310', 'py311']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
fix = true

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.mypy]
ignore_errors = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_utils --cov-report=xml
passenv =
    CI
    GITHUB_ACTIONS
    DISPLAY
    XAUTHORITY
    PYVISTA_OFF_SCREEN
"""
