[project]
name = "brainglobe-utils"
authors = [{ name = "Adam Tyson", email = "code@adamltyson.com" }]
description = "Shared general purpose tools for the BrainGlobe project"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "brainglobe-atlasapi >= 2.0.1",
    "brainglobe-space",
    "configobj",
    "natsort",
    "nibabel >= 2.1.0",
    "numba",
    "numpy",
    "pandas",
    "psutil",
    "pyarrow",
    "pynrrd",
    "PyYAML",
    "scikit-image",
    "scipy",
    "slurmio",
    "tifffile",
    "tqdm",
]
dynamic = ["version"]


[project.scripts]
cite-brainglobe = "brainglobe_utils.citation.cite:cli"

[project.urls]
homepage = "https://brainglobe.info"
bug_tracker = "https://github.com/brainglobe/brainglobe-utils/issues"
source_code = "https://github.com/brainglobe/brainglobe-utils"
user_support = "https://github.com/brainglobe/brainglobe-utils/issues"

[project.optional-dependencies]
napari = ["napari>=0.4.18", "qtpy", "superqt"]

dev = [
    "black",
    "coverage",
    "mypy",
    "pre-commit",
    "pyqt5",
    "pytest-cov",
    "pytest-qt",
    "pytest-mock",
    "pytest",
    "qtpy",
    "ruff",
    "scikit-image",
    "setuptools_scm",
    "superqt",
    "tox",
    "pooch",
]


[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe_utils*"]
exclude = ["tests", "docs*"]

[tool.pytest.ini_options]
addopts = "--cov=brainglobe_utils"
filterwarnings = [
    "error",
    # Emitted by scikit-image on import, see https://github.com/scikit-image/scikit-image/issues/6663
    # This filter should be removed when scikit-image 0.20 is released
    "ignore:`np.bool8` is a deprecated alias for `np.bool_`",
    # Emitted by nptyping, see https://github.com/ramonhagenaars/nptyping/issues/102
    # for upstream issue
    "ignore:`np.object0` is a deprecated alias for ``np.object0`",
    "ignore:`np.int0` is a deprecated alias for `np.intp`",
    "ignore:`np.uint0` is a deprecated alias for `np.uintp`",
    "ignore:`np.void0` is a deprecated alias for `np.void`",
    "ignore:`np.bytes0` is a deprecated alias for `np.bytes_`",
    "ignore:`np.str0` is a deprecated alias for `np.str_`",
]

[tool.black]
target-version = ['py39', 'py310', 'py311']
skip-string-normalization = false
line-length = 79

[tool.setuptools_scm]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
fix = true

[tool.ruff.lint]
select = ["I", "E", "F"]

[tool.mypy]
ignore_errors = true

# [[tool.mypy.overrides]]
# module = ["imlib.cells.*"]
# ignore_errors = false
# strict = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}
isolated_build = True

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_utils --cov-report=xml
passenv =
    CI
    NUMBA_DISABLE_JIT
    GITHUB_ACTIONS
    DISPLAY
    XAUTHORITY
    PYVISTA_OFF_SCREEN
"""
